--- a/SanbotApp/gradle/libs.versions.toml
+++ b/SanbotApp/gradle/libs.versions.toml
@@ -1,16 +1,13 @@
 [versions]
-
-agp = "8.3.0"
+agp = "8.13.1"
 kotlin = "1.9.23"
-kotlinComposePlugin = "1.5.15"
 coreKtx = "1.13.1"
 lifecycleRuntimeKtx = "2.8.0"
 activityCompose = "1.9.0"
 composeBom = "2024.06.00"
+composeCompiler = "1.5.13"
 navigationCompose = "2.8.0"
 hilt = "2.51"
-
-
 hiltNavigationCompose = "1.2.0"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
@@ -58,6 +55,7 @@ accompanist-systemuicontroller = { group = "com.google.accompanist", name = "acc
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+# removed kotlin-compose plugin alias (org.jetbrains.kotlin.compose) — not used for Android-only Compose projects
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
